-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.2
-
dcf2f16384c74ebb2a2c6a233bca1fb4f2f085a1 (qt-creator/qt-creator/master)
Trying to debug with x86 or armv7 devices seems to fail. I am guessing it is because the second adb command to pull app_process fails as the file with that name doesn't exist, it seems to actually be removing the already downloaded one.
15:02:24: Pulling files necessary for debugging. 15:02:24: Package deploy: Running command "/home/jopoikel/work/android-sdk-linux/platform-tools/adb -s emulator-5554 pull /system/bin/app_process /home/jopoikel/work/tests/build-untitled2-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/app_process". 15:02:24: Package deploy: Running command "/home/jopoikel/work/android-sdk-linux/platform-tools/adb -s emulator-5554 pull /system/bin/app_process32 /home/jopoikel/work/tests/build-untitled2-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/app_process". 15:02:24: The command "/home/jopoikel/work/android-sdk-linux/platform-tools/adb" terminated with exit code 1. 15:02:24: Package deploy: Failed to pull "/system/bin/app_process32" to "/home/jopoikel/work/tests/build-untitled2-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/app_process". 15:02:24: Package deploy: Running command "/home/jopoikel/work/android-sdk-linux/platform-tools/adb -s emulator-5554 pull /system/bin/linker /home/jopoikel/work/tests/build-untitled2-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/linker". 15:02:24: Package deploy: Running command "/home/jopoikel/work/android-sdk-linux/platform-tools/adb -s emulator-5554 pull /system/lib/libc.so /home/jopoikel/work/tests/build-untitled2-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_0_for_Android-Debug/libc.so".
Tested with armv7 image for Android 4.4 and Qt 5.15