Fix debugging for x86 and armv7 Android builds

Fixes: QTCREATORBUG-24191
Change-Id: I7b3033f47a4eb0f63be351576df1540e98edb903
Reviewed-by: hjk <hjk@qt.io>